apps/prod/eden/middleware-https.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: eden-redirect-https
  namespace: eden
spec:
  redirectScheme:
    scheme: https
    permanent: true
