apps/prod/eden/portal-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: eden-portal
  namespace: eden
  labels:
    app.kubernetes.io/name: eden-portal
    app.kubernetes.io/part-of: eden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: eden-portal
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
